# rawk

./: Cargo.toml  GRAMMAR.txt  README.md  justfile
.github/workflows/: ci.yml
src/: arguments.rs  ast.rs  lexer.rs  main.rs  parser.rs  token.rs
